--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <h3>Calculator</h3>
             <ul>
               <li>Developed and styled a single-page website for metric to imperial unit conversion using JavaScript, HTML, and CSS3. </li>
-               <a href= https://github.com/scmsal/calculator><button></button> View on GitHub </button></a>
+              <projectbutton><a href= https://github.com/scmsal/calculator View on GitHub </a></projectbutton>
             </ul>
           </div>
           <hr>
