--- a/index.html
+++ b/index.html
@@ -88,7 +88,11 @@
             <h3>Calculator</h3>
             <ul>
               <li>Developed and styled a single-page website for metric to imperial unit conversion using JavaScript, HTML, and CSS3. </li>
-              <button class=project><a href= https://github.com/scmsal/calculator View on GitHub </a></button>
+              <div class=projectbutton>
+                <a href= https://github.com/scmsal/calculator>View on GitHub </a>
+              </div>
+
+
             </ul>
           </div>
           <hr>
