--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <ul>
               <li>Developed and styled a single-page website for metric to imperial unit conversion using JavaScript, HTML, and CSS3. </li>
               <div class=projectbutton>
-              <a href= https://github.com/scmsal/calculator>View on GitHub </a>
+              <a class=projectbutton href= https://github.com/scmsal/calculator>View on GitHub </a>
             </div>
 
             </ul>
