--- a/index.html
+++ b/index.html
@@ -88,9 +88,12 @@
             <h3>Calculator</h3>
             <ul>
               <li>Developed and styled a single-page website for metric to imperial unit conversion using JavaScript, HTML, and CSS3. </li>
-              <div class=projectbutton>
-              <a class=projectbutton href= https://github.com/scmsal/calculator>View on GitHub </a>
-            </div>
+              <div class="projectbutton">
+              <a class="projectbutton" href= https://github.com/scmsal/calculator>View on GitHub </a>
+              </div>
+              <div class = "projectbutton">
+                <a href="https://scmsal.github.io/portfolio/"> View in browser</a>
+              </div>
 
             </ul>
           </div>
