--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
             <h3>Calculator</h3>
             <ul>
               <li>Developed and styled a single-page website for metric to imperial unit conversion using JavaScript, HTML, and CSS3. </li>
-              <div class="projectbutton">
+              <div class="projectbutton" style="clear:both;">
               <a class="projectbutton" href= https://github.com/scmsal/calculator>View on GitHub </a>
               </div>
-              <div class = "projectbutton">
+              <div class = "projectbutton" style="clear:both;">
                 <a href="https://scmsal.github.io/portfolio/"> View in browser</a>
               </div>
 
