div for buttons

--- a/index.html
+++ b/index.html
@@ -89,13 +89,14 @@
             <ul>
               <li>Developed and styled a single-page website for metric to imperial unit conversion using JavaScript, HTML, and CSS3. </li>
               
+              <div class="buttons"></div>
               <div class="projectbutton" style="clear:both;">
-              <a class="projectbutton" href= https://github.com/scmsal/calculator>View on GitHub </a>
+                <a class="projectbutton" href= https://github.com/scmsal/calculator>View on GitHub </a>
               </div>
               <div class = "projectbutton" style="clear:both;">
                 <a href="https://scmsal.github.io/portfolio/"> View in browser</a>
               </div>
-
+            </div>
             </ul>
           </div>
           <hr>
