--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
               
               <div class="projectbutton" style="clear:both;">
                 <a href= https://github.com/scmsal/calculator>View on GitHub </a>
+              <div class="projectbutton" style="clear:both;"></div>
                 <a href="https://scmsal.github.io/portfolio/">View in browser</a>
               </div>
             
