--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
               <li>Developed and styled a single-page website for metric to imperial unit conversion using JavaScript, HTML, and CSS3. </li>
               
               <div class="projectbutton" style="clear:both;">
-                <a href= https://github.com/scmsal/calculator>View on GitHub </a>
+                <a class="projectbutton" href= https://github.com/scmsal/calculator>View on GitHub </a>
               </div>
               <div class="projectbutton" style="clear:both;"></div>
-                <a href="https://scmsal.github.io/portfolio/">View in browser</a>
+                <a class="projectbutton" href="https://scmsal.github.io/portfolio/">View in browser</a>
               </div>
             
             </ul>
