--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
             <ul>
               <li>Developed and styled a single-page website for metric to imperial unit conversion using JavaScript, HTML, and CSS3. </li>
               
-              <div class="projectbutton" style="clear:both;">
+              <div style="clear:both;">
                 <a class="projectbutton" href= https://github.com/scmsal/calculator>View on GitHub </a>
               </div>
-              <div class="projectbutton" style="clear:both;">
+              <div style="clear:both;">
                 <a class="projectbutton" href="https://scmsal.github.io/portfolio/">View in browser</a>
               </div>
             
