--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
             <ul>
               <li>Developed and styled a single-page website for metric to imperial unit conversion using JavaScript, HTML, and CSS3. </li>
               
-              <div style="clear:both;">
-                <a class="projectbutton" href= https://github.com/scmsal/calculator>View on GitHub </a>
+              <div class="projectbutton" style="clear:both;">
+                <a href= https://github.com/scmsal/calculator>View on GitHub </a>
               </div>
-              <div style="clear:both;">
-                <a class="projectbutton" href="https://scmsal.github.io/portfolio/">View in browser</a>
+              <div class="projectbutton" style="clear:both;">
+                <a href="https://scmsal.github.io/portfolio/">View in browser</a>
               </div>
             
             </ul>
