--- a/index.html
+++ b/index.html
@@ -110,7 +110,15 @@
             </ul>
           </div>
           <hr>
-        
+
+          <div class="project-card">
+            <h3 Java projects>
+            <ul>  
+              <li> Created an application to solve different Java problems with a shared parser class. Still refactoring and adding problem classes.</li>
+              <div class="projectbutton" style="clear:both;">
+                <a href= "https://github.com/scmsal/myprojects/tree/3281fc0f7c2e0d32c0e3ec46fd5f9bc93b120135/myprojects1">View on GitHub </a>
+              </div>
+            </ul>
           <div class="project-card">
             <h3>Codewars kata</h3>
             <ul>
