--- a/index.html
+++ b/index.html
@@ -112,21 +112,22 @@
           <hr>
 
           <div class="project-card">
-            <h3 Java projects>
+            <h3> Java projects </h3>
             <ul>  
               <li> Created an application to solve different Java problems with a shared parser class. Still refactoring and adding problem classes.</li>
               <div class="projectbutton" style="clear:both;">
                 <a href= "https://github.com/scmsal/myprojects/tree/3281fc0f7c2e0d32c0e3ec46fd5f9bc93b120135/myprojects1">View on GitHub </a>
               </div>
             </ul>
+
+          </div>
           <div class="project-card">
             <h3>Codewars kata</h3>
             <ul>
               <li>Developed short Java programs to solve scenarios created by other users</li>
               <a href="https://www.codewars.com/users/Code-name-go/completed_solutions">
                 <img src= https://www.codewars.com/users/Code-name-go/badges/large style="margin-left:30px">
-              </a>
-              
+              </a>  
             </ul>
           </div>
     </div>
