--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
               </li>
               
               <div class="projectbutton" style="clear:both;">
-                <a href= "https://github.com/scmsal/calculator">View on GitHub </a>
+                <a href= "https://github.com/scmsal/calculator" target="_blank">View on GitHub </a>
               </div>
               <div class="projectbutton" style="clear:both;">
-                <a href="https://scmsal.github.io/calculator">View in browser</a>
+                <a href="https://scmsal.github.io/calculator" target="_blank">View in browser</a>
               </div>
             
             </ul>
@@ -116,10 +116,11 @@
             <ul>  
               <li> Created an application to solve different Java problems with a shared parser class. Still refactoring and adding problem classes.</li>
               <div class="projectbutton" style="clear:both;">
-                <a href= "https://github.com/scmsal/myprojects/tree/3281fc0f7c2e0d32c0e3ec46fd5f9bc93b120135/myprojects1">View on GitHub </a>
+                <a href= "https://github.com/scmsal/myprojects/tree/3281fc0f7c2e0d32c0e3ec46fd5f9bc93b120135/myprojects1" target="_blank">
+                  View on GitHub </a>
               </div>
               <div class="projectbutton" style="clear:both;">
-                <a href="https://www.online-ide.com/KTduQg6EPn">View in browser</a>
+                <a href="https://www.online-ide.com/KTduQg6EPn" target="_blank">View in browser</a>
               </div>
             </ul>
 
@@ -128,7 +129,7 @@
             <h3>Codewars kata</h3>
             <ul>
               <li>Developed short Java programs to solve scenarios created by other users</li>
-              <a href="https://www.codewars.com/users/Code-name-go/completed_solutions">
+              <a href="https://www.codewars.com/users/Code-name-go/completed_solutions" target="_blank">
                 <img src= https://www.codewars.com/users/Code-name-go/badges/large style="margin-left:30px">
               </a>  
             </ul>
