--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <h3>This website</h3>
             <ul>
               <li>Created with HTML and CSS3, originally based on a project tutorial during the Edx.org Introduction to Web Development 
-                course. I changed the layout, contents, and style, adding buttons, icons, fonts, and responsiveness. It is still a work in progress.
+                course. I changed the layout, contents, and style, adding buttons, icons, and fonts. It is still a work in progress.
               </li>
             </ul>
           </div>
