--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <div class="project-card">
             <h3>This website</h3>
             <ul>
-              <li>Created with HTML and CSS3, originally based on a project tutorial during the Edx.org Introduction to Web Development 
+              <li>Created with HTML, CSS3, and JavaScript, originally based on a project tutorial during the Edx.org Introduction to Web Development 
                 course. I changed the layout, contents, and style, adding buttons, icons, and fonts. It is still a work in progress.
               </li>
             </ul>
@@ -113,7 +113,7 @@
             <ul>  
               <li> Created an application to solve different Java problems with a shared parser class. Still refactoring and adding problem classes.</li>
               <div class="projectbutton" style="clear:both;">
-                <a href= "https://github.com/scmsal/myprojects/tree/3281fc0f7c2e0d32c0e3ec46fd5f9bc93b120135/myprojects1" target="_blank">
+                <a href= "https://github.com/scmsal/myprojects/tree/main/myprojects1/src" target="_blank">
                   View on GitHub </a>
               </div>
               <div class="projectbutton" style="clear:both;">
