--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                   View on GitHub </a>
               </div>
               <div class="projectbutton" style="clear:both;">
-                <a href="https://www.online-ide.com/KTduQg6EPn" target="_blank">View in browser</a>
+                <a href="https://www.online-ide.com/sBHoGTfCO1" target="_blank">View in browser</a>
               </div>
             </ul>
 
