--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
           <div class="project-card">
             <h3>This website</h3>
             <ul>
-              <li>Created with HTML, CSS3, and JavaScript, originally based on a project tutorial during the Edx.org Introduction to Web Development 
-                course. I changed the layout, contents, and style, adding buttons, icons, and fonts. It is still a work in progress.
+              <li>Created with HTML, CSS3, and JavaScript, originally based on a project tutorial during the IBM Introduction to Web Development 
+                course on edX.org. I changed the layout, contents, and style, adding buttons, icons, and fonts. It is still a work in progress.
               </li>
             </ul>
           </div>
