--- a/index.html
+++ b/index.html
@@ -75,9 +75,7 @@
           
     <!-- Projects -->
     <section class="projects" id="projects">
-      <h2>
-        Projects
-      </h2>
+      <h2> Projects</h2>
       <div style="clear:both;"></div>
 
         <div id="projects-container" class="projects-container">
@@ -119,8 +117,8 @@
                 <a href="https://www.online-ide.com/sBHoGTfCO1" target="_blank">View in browser</a>
               </div>
             </ul>
-        
           </div>
+          <hr>
           <div class="project-card">
             <h3>Codewars kata</h3>
             <ul>
