--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </div>
 
      <div class="skill">
-        <img src="OCI2024GAIOCP-removebg.png" style="height:200px;"/>
+        <img src="OCI2024GAIOCP-removebg.png" />
      </div>
     </section>
           
