--- a/index.html
+++ b/index.html
@@ -67,10 +67,15 @@
           <img src="html_finalprojimages/github-mark.png"/>
         </div> 
 
-      <div class="skill">
+     
+    </section>
+  <!-- Certifications -->  
+    <section id="certifications">
+      <h2>Certifications</h2>
+       <div style="clear:both;"></div>
+       <div class="skill">
         <img src="html_finalprojimages/OCIF2023CA-crop.jpeg" style=" height:200px;"/>
       </div>
-
      <div class="skill">
         <img src="OCI2024GAIOCP-removebg.png" />
      </div>
