--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               
     <!-- Skills -->
     <section id="skills">
-      <h2>Skills and certifications</h2>
+      <h2>Skills</h2>
       <div style="clear:both;"></div>
       <div class="all_skills">
         <div class="skill">
