--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             Live, learn, code
           </h1>
           <p>
-            I'm an aspiring Java developer with a background in languages and education. After having completed a Professional Certificate in Introduction to Java Programming, and introductory courses on cloud computing and web development, 
+            I'm an aspiring developer with a background in languages and education. After having completed a Professional Certificate in Introduction to Java Programming, and introductory courses on cloud computing and web development, 
             I am excited to continue learning and advancing on my new career path.
           </p>
       </div>
@@ -77,7 +77,8 @@
         <img src="html_finalprojimages/OCIF2023CA-crop.jpeg" style=" height:200px;"/>
       </div>
      <div class="skill">
-        <img src="OCI2024GAIOCP-removebg.png" />
+        <img src="OCI2024GAIOCP-removebg.png"/>
+       <img src="OCI2024GAIOCP-removebg.jpg"/>
      </div>
     </section>
           
