--- a/index.html
+++ b/index.html
@@ -77,8 +77,7 @@
         <img src="html_finalprojimages/OCIF2023CA-crop.jpeg" style=" height:200px;"/>
       </div>
      <div class="skill">
-        <img src="OCI2024GAIOCP-removebg.png"/>
-       <img src="OCI2024GAIOCP-removebg.jpg"/>
+        <img src="OCI2024GAIOCP-removebg.png" style=" height:200px;"/>
      </div>
     </section>
           
