changed about-me image and title

--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
     <section id="about-me" class="container">
       <div>
         <picture>
-          <img src= "html_finalprojimages/mymacbook.png">
+          <img src= "html_finalprojimages/macbook misty.png">
         </picture>
       </div>
       <div>
           <h1>
-            Live, learn, code
+            learnToCode() ~ codeToLearn()
           </h1>
           <p>
-            I'm an aspiring developer with a background in languages and education. After having completed a Professional Certificate in Introduction to Java Programming, and introductory courses on cloud computing and web development, 
+            I'm an aspiring developer with a background in languages and education. After having completed a Professional Certificate in Introduction to Java Programming, and introductory courses on cloud computing, web development, and AI.
             I am excited to continue learning and advancing on my new career path.
           </p>
       </div>
