added certification, node and SQL skills

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             learnToCode() ~ codeToLearn()
           </h1>
           <p>
-            I'm an aspiring developer with a background in languages and education. After having completed a Professional Certificate in Introduction to Java Programming, and introductory courses on cloud computing, web development, and AI.
+            I'm an aspiring developer with a background in languages and education. After having completed a Professional Certificate in Introduction to Java Programming, and introductory courses on cloud computing, web development, and AI,
             I am excited to continue learning and advancing on my new career path.
           </p>
       </div>
@@ -67,17 +67,25 @@
           <img src="html_finalprojimages/github-mark.png"/>
         </div> 
 
-     
+        <div class="skill">
+          <img src="html_finalprojimages/node.png"/>
+        </div> 
+
+        <div class="skill">
+          <h4>SQL</h4>
+        </div> 
+
     </section>
   <!-- Certifications -->  
     <section id="certifications">
       <h2>Certifications</h2>
        <div style="clear:both;"></div>
-       <div class="skill">
-        <img src="html_finalprojimages/OCIF2023CA-crop.jpeg" style=" height:200px;"/>
+       <div class="certifications">
+        <img src="html_finalprojimages/OCIF2023CA-removebg.png" style=" height:200px margin-bottom:20px;"/>
+        <img src="html_finalprojimages/OCI2024GAIOCP-removebg-crop.jpg" style=" height:200px margin-bottom:20px;"/>
       </div>
     </section>
-          
+    <div style="clear:both;"></div>
     <!-- Projects -->
     <section class="projects" id="projects">
       <h2> Projects</h2>
