trying to get to current version

--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
           Stephanie S
         </div>
         <div class="container-menu" id="Menu">
-          <a class="menulink" href="#about-me">About Me</a>
-          <a class="menulink" href="#skills">Skills</a>
-          <a class="menulink" href="#projects">Projects</a>
-          <a class="menulink" href="#contact">Contact</a>
+          <ul>
+          <li><a class="menulink" href="#about-me">About Me</a> </li>
+          <li><a class="menulink" href="#skills">Skills</a></li>
+          <li><a class="menulink" href="#projects">Projects</a></li>
+          <li><a class="menulink" href="#contact">Contact</a></li>
+        </ul>
         </div>
     </nav>
 
@@ -48,7 +50,7 @@
       <div style="clear:both;"></div>
       <div class="all_skills">
         <div class="skill">
-          <img src="html_finalprojimages/java.png"/>
+          <img src="html_finalprojimages/java.png" style="margin-left: 20px"/>
         </div>  
 
         <div class="skill">
