still tryuing to get to current version

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
       <h2>Certifications</h2>
        <div style="clear:both;"></div>
        <div class="certifications">
-        <img src="html_finalprojimages/OCIF2023CA-removebg.png" style=" height:200px margin-bottom:20px;"/>
-        <img src="html_finalprojimages/OCI2024GAIOCP-removebg-crop.jpg" style=" height:200px margin-bottom:20px;"/>
+        <img src="html_finalprojimages/OCIF2023CA-removebg.png" style=" height:200px; margin-bottom: 20px;"/>
+        <img src="html_finalprojimages/OCI2024GAIOCP-removebg-crop.jpg" style=" height:200px; margin-bottom:20px;"/>
       </div>
     </section>
     <div style="clear:both;"></div>
