--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 
     </section>
   <!-- Certifications -->  
+  <div style="clear:both;"></div>
     <section id="certifications">
       <h2>Certifications</h2>
        <div style="clear:both;"></div>
