Update index.html - GitHub link for gardening app

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 I designed a React, Redux, and Bootstrap web app to help plan a vegetable garden, pulling information from a couple of APIs. I will continue fleshing it out and adding functionality.
               </li>
               <div class="projectbutton" style="clear:both">
-                <a href="https://github.com/scmsal/original-projects/garden_app" target="_blank">View on GitHub </a>
+                <a href="https://github.com/scmsal/original-projects/tree/main/garden_app" target="_blank">View on GitHub </a>
             </ul>
           </div>
           
@@ -124,9 +124,9 @@
               <div class="projectbutton" style="clear:both">
                 <a href= "https://github.com/scmsal/calculator" target="_blank">View on GitHub </a>
               </div>
-<!--               <div class="projectbutton" style="clear:both">
+              <div class="projectbutton" style="clear:both">
                 <a href="https://scmsal.github.io/calculator" target="_blank">View in browser</a>
-              </div> -->
+              </div>
             
             </ul>
           </div>
