--- a/index.html
+++ b/index.html
@@ -111,9 +111,20 @@
               </li>
               <div class="projectbutton" style="clear:both">
                 <a href="https://github.com/scmsal/original-projects/tree/main/garden_app" target="_blank">View on GitHub </a>
+              </div>
             </ul>
           </div>
-          
+          <hr>
+           <div class="project-card">
+            <h3>Full Stack Software Development program projects </h3>
+            <ul>
+              <li>A description of each of my graded assessment projects is available on the e-portfolio page provided by Great Learning, the platform for the University of Texas at Austin's Professional Certificate in Full Stack Software Development. 
+              </li>
+              <div class="projectbutton" style="clear:both">
+                <a href="https://mygreatlearning.com/eportfolio/stephanie-salifu" target="_blank">View e-portfolio </a>
+              </div>
+            </ul>
+          </div>
           <div class="project-card">
             <h3>Calculator</h3>
             <ul>
