--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
             learnToCode() ~ codeToLearn()
           </h1>
           <p>
-            I'm an aspiring developer with a background in languages and education. After having completed a Professional Certificate in Introduction to Java Programming, and introductory courses on cloud computing, web development, and AI,
-            I am excited to continue learning and advancing on my new career path.
+            I am a highly motivated software developer-in-training with a background in language services and over a year’s experience writing, testing, and debugging code. Since beginning my coding journey in November 2022, I have completed
+            a Professional Certificate in Introduction to Java Programming, and courses on cloud computing, web development, and generative AI. I am currently on track to complete a Professional Certificate
+            in Full Stack Software Development (McCombs School of Business, University of Texas at Austin) by August 2025.  I am excited to continue learning and advancing on my new career path.
           </p>
       </div>
     </section>
